tests/errors/syn_method19.java
public class syn_method19 {
public static int main ) {
 
}
}